@@ -718,6 +718,8 @@ namespace Marvel {
 		
 		// table commands
 		ADD_PYTHON_FUNCTION(add_table)
+		ADD_PYTHON_FUNCTION(set_table_data)
+		ADD_PYTHON_FUNCTION(get_table_data)
 		ADD_PYTHON_FUNCTION(set_headers)
 		ADD_PYTHON_FUNCTION(clear_table)
 		ADD_PYTHON_FUNCTION(get_table_item)
